Fix alignment on visualizer cards

--- a/website/_sass/_cards.scss
+++ b/website/_sass/_cards.scss
@@ -48,10 +48,6 @@
     margin-left: -5px;
     margin-right: -5px;
   }
-  [class*="col"]{
-    padding-left: 5px;
-    padding-right: 5px;
-  }
 }
 
 .card-dashboard{
